微调部分等之后更新,有点累了

--- a/1.大模型应用基础/训练与推理.md
+++ b/1.大模型应用基础/训练与推理.md
@@ -1,7 +1,8 @@
-1. 有哪些微调?
+1. 大模型有推理能力吗?
 
 ```text
-Adapter Tuning、LORA、Prefix-Tuning、Prompt Tuning、P-tuning v2
+是的，大语言模型具备推理能力
+推理是指在训练阶段之后，使用已经训练好的模型对新的输入数据进行预测、生成或分类等任务。大语言模型可以通过输入一段文本或问题，然后生成相应的回答或补全文本。
 ```
 
 2. SFT（有监督微调）的数据集格式？
