--- a/2.大模型优化技术/微调优化.md
+++ b/2.大模型优化技术/微调优化.md
@@ -45,18 +45,20 @@ Supervised Fine-Tuning（SFT）有监督微调
 
 6. 💡LoRA(low-rank adaptation)  of large language models
 
-[LoRA&Prompt-Tuning.md](..%2Flangchain%2FLoRA%26Prompt-Tuning.md)
+[LoRA&ETC.md](..%2Flangchain%2FLoRA%26ETC.md)
 
-7. 如果想要在某个模型基础上做全参数微调
+7. 为什么需要 PEFT？ 参数高效微调
 
 ```text
+PEFT（Parameter-Efficient Fine-Tuning）是一种用于微调任务的性能估计和建模方法。Transformer的 PEFT 方法
+它的主要目的是帮助研究人员和从业者在微调过程中更好地理解和预测模型的性能，并进行更有效的模型选择和调优。
 
 ```
 
-8. 如果想要在某个模型基础上做全参数微调
+8. PEFT(参数高效微调) 和 全量微调区别？
 
 ```text
-
+PEFT（Parameter-Efficient Fine-Tuning）和全量微调（Full Fine-Tuning）是两种不同的微调方法
 ```
 
 9. 如果想要在某个模型基础上做全参数微调
@@ -71,5 +73,10 @@ Supervised Fine-Tuning（SFT）有监督微调
 
 ```
 
+11. 有哪些微调?
+
+```text
+Adapter Tuning、LORA、Prefix-Tuning、Prompt Tuning、P-tuning、P-tuning v2
+```
 
 
