--- a/1.大模型应用基础/大模型的泛化能力.md
+++ b/1.大模型应用基础/大模型的泛化能力.md
@@ -102,6 +102,24 @@ RLHF 的基本思想是，代理系统与人类交互，并根据人类的反馈
 此外，它还可以看作是一种缩放因子，帮助模型在不同维度上保持一致的性能。
 ```
 
+9.大模型问什么都使用decoder-only
+
+      a）工程上应用上方便处理多轮对话；
+
+      b）在没有微调的情况下，其更容易处理zero-shot generation；
+
+      c）encoder-decoder在微调之后效果优于decoder-only，但是参数量巨大，考虑到性能和计算资源上的消耗更少；
+
+      d）encoder之所以用处不大，attention matrix是低秩的，而decoder-only中的attention matrix是triangle matrix，因此一定是满秩的，表达能力更强。
+
+10.大模型如何解决生成的内容重复的问题
+
+     具体可参考：https://zhuanlan.zhihu.com/p/631847634
+
+11.领域大模型LLM训练Trick
+
+     具体可参考：https://zhuanlan.zhihu.com/p/656244605
+
 ![img.png](..%2Fusing_files%2Fimg%2Fllms%2Fimg.png)
 
 ### Reference(参考文档)
