--- a/2.大模型优化技术/微调优化.md
+++ b/2.大模型优化技术/微调优化.md
@@ -45,7 +45,7 @@ Supervised Fine-Tuning（SFT）有监督微调
 
 6. 💡LoRA(low-rank adaptation)  of large language models
 
-[LoRA&ETC.md](..%2Flangchain%2FLoRA%26ETC.md)
+[LoRA..ETC.md](..%2Flangchain%2FLoRA..ETC.md)
 
 7. 为什么需要 PEFT？ 参数高效微调
 
