--- a/1.大模型应用基础/大模型的泛化能力.md
+++ b/1.大模型应用基础/大模型的泛化能力.md
@@ -102,7 +102,7 @@ RLHF 的基本思想是，代理系统与人类交互，并根据人类的反馈
 此外，它还可以看作是一种缩放因子，帮助模型在不同维度上保持一致的性能。
 ```
 
-9.大模型问什么都使用decoder-only
+9.大模型为什么都使用decoder-only
 
       a）工程上应用上方便处理多轮对话；
 
