--- a/1.大模型应用基础/训练与推理.md
+++ b/1.大模型应用基础/训练与推理.md
@@ -69,3 +69,30 @@ fp16 表示浮点数的数据类型，使用16位（2字节）来表示一个数
 数据清理和预处理=>审查和验证模型=>引入合规性约束=>监控和更新模型=>合规培训和教育
 ```
 
+9.过拟合解决办法
+
+```text
+1.训练数据比较小,或者样本里面的噪声数据干扰过大，导致模型过分记住了噪声特征
+2.残差连接(模仿transformer里面的)
+```
+
+### Reference(参考文档)
+
+* [大模型面试面经](https://zhuanlan.zhihu.com/p/643560888)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
