docs: 回家再写,push一下

--- a/2.大模型优化技术/常见大模型调用代码.md
+++ b/2.大模型优化技术/常见大模型调用代码.md
@@ -54,7 +54,52 @@ agent_executor = AgentExecutor(agent=agent, tools=tools, verbose=True)
 # 执行
 agent_executor.invoke({"input": "hi!"})
 ```
+### 补充一下单独调用openai等怎么使用
+```python
+# opanai
+import os
+import httpx
+from openai import OpenAI
 
+proxyHost = "127.0.0.1"
+proxyPort = 10809
+
+client = OpenAI(http_client=httpx.Client(proxies=f"http://{proxyHost}:{proxyPort}"))
+client.api_key = os.getenv("OPENAI_API_KEY")
+completion = client.chat.completions.create(
+    model="gpt-4-1106-preview",
+    messages=[
+        {"role": "user",
+         "content": "你是哪个模型?你的知识库截止到哪天?卡塔尔世界杯总冠军是哪个?"
+         }
+    ]
+)
+print(completion.choices[0].message.content)
+
+
+# claude
+import anthropic
+import httpx
+
+proxyHost = "127.0.0.1"
+proxyPort = 10809
+client = anthropic.Anthropic(
+    # defaults to os.environ.get("ANTHROPIC_API_KEY")
+    http_client=httpx.Client(proxies=f"http://{proxyHost}:{proxyPort}")
+)
+message = client.messages.create(
+    model="claude-3-opus-20240229",
+    max_tokens=1000,
+    temperature=0,
+    messages=[
+        {"role": "user",
+         "content": "python写一个冒泡排序"
+         }
+    ]
+)
+
+print(message.content[0].text)
+```
 ### 附注
 优化之后就是LCEL了,参看下面的其他
 
