--- a/面试必问问题.md
+++ b/面试必问问题.md
@@ -67,3 +67,18 @@
 (一定要问，给自己上大分！)
 7:部门人员架构，组内的具体分工是怎样？
 (一定要问，说不清楚的，千万别去入职！)】
+
+9. 谈薪相关
+```text
+报价公式:
+准确数字+缓解气氛+综合考虑
+我希望下份工作的年薪能到40万，当然我现在找工作也不只是看钱，我也很在意公司的发展和工作团队氛围，
+这些都会综合考虑的
+
+还价公式:
+理解+优势阐述+加入意愿+再次报价+请求协助
+理解明白了，但我在这个工作领域已经有4年经验了,特别擅长算法和大模型，
+相信我在未来也会给公司带来更多的价值，我真的很想加入咱们公司，
+不管是这个领域还是这个岗位的工作内容，我都非常满意。只要年薪能够给到这个价，
+我就一定会立刻接这个offer，老师，您能看看能再帮我申请一下吗？
+```
