docs: 微调再看看

--- a/2.大模型优化技术/微调优化.md
+++ b/2.大模型优化技术/微调优化.md
@@ -71,6 +71,57 @@ Adapter Tuning、LORA、Prefix-Tuning、Prompt Tuning、P-tuning、P-tuning v2
 
 ![img_9.png](..%2Fusing_files%2Fimg%2Flora%2Fimg_9.png)
 
+
+```python
+#Adding the adapters in the layers
+model = prepare_model_for_kbit_training(model)
+peft_config = LoraConfig(
+        r=16,
+        lora_alpha=16,
+        lora_dropout=0.05,
+        bias="none",
+        task_type="CAUSAL_LM",
+        target_modules=["q_proj", "k_proj", "v_proj", "o_proj","gate_proj"]
+    )
+model = get_peft_model(model, peft_config)
+# Hyperparamter
+training_arguments = TrainingArguments(
+    output_dir= "./results",
+    num_train_epochs= 2,
+    per_device_train_batch_size= 8,
+    gradient_accumulation_steps= 2,
+    optim = "paged_adamw_8bit",
+    save_steps= 1000,
+    logging_steps= 30,
+    learning_rate= 2e-4,
+    weight_decay= 0.001,
+    fp16= False,
+    bf16= False,
+    max_grad_norm= 0.3,
+    max_steps= -1,
+    warmup_ratio= 0.3,
+    group_by_length= True,
+    lr_scheduler_type= "constant",
+    report_to="wandb"
+)
+# Setting sft parameters
+trainer = SFTTrainer(
+    model=model,
+    train_dataset=dataset,
+    peft_config=peft_config,
+    max_seq_length= None,
+    dataset_text_field="chat_sample",
+    tokenizer=tokenizer,
+    args=training_arguments,
+    packing= False,
+)
+# Save the fine-tuned model
+trainer.model.save_pretrained(new_model)
+wandb.finish()
+model.config.use_cache = True
+model.eval()
+```
+
 ### Reference(参考文档)
 
 * [微调步骤](https://github.com/liguodongiot/llm-action)
