--- a/3.interview_qa/任意子智能.md
+++ b/3.interview_qa/任意子智能.md
@@ -1,1 +1,10 @@
-英文自我介绍
+英文自我介绍 准备了,没用上,面试官很年轻,很有活力,是一家创业公司,另外一个是教授
+
+1. 讲一下项目经历,(对langchain怎么做重点讲一下),非常细节
+2. 讲一下自己学习的经历,对于AI的看法和
+3. langchain做的项目执行的时候找不到对应的context,这种怎么解决
+4. 如果给用户推荐对应的文章?这个问题问了很久(25mins).思考需要非常深入才行
+5. hh,你的昵称是什么意思?
+
+
+很多大佬,公司里面,也主要是问了问一些落地场景,我好虚啊,不知道可以过不,求求了,让老子过吧.嘤嘤嘤
