docs: 增加防辞退相关

--- a/面试必问问题.md
+++ b/面试必问问题.md
@@ -11,6 +11,8 @@
 
 2:为什么考虑从上家离职？
 
+(下面这些个有问题,需要真诚一点,面试官都是看的出来的)
+
 感谢前公司+工作总结+离职原因+你的愿景
 
 首先我非常感谢上家公司为我提供的发展机会。 在过去一段时间，我分别为公司创造了XX的业务价值和收
@@ -82,3 +84,35 @@
 不管是这个领域还是这个岗位的工作内容，我都非常满意。只要年薪能够给到这个价，
 我就一定会立刻接这个offer，老师，您能看看能再帮我申请一下吗？
 ```
+
+10. 防辞退相关
+```text
+1.大家对你的工作能力和表现,都不太认可,
+你来了也快有一年了。可能还是不太适合。如果你一个小姑娘被开除了的话，以后可能也不太好找工作。
+所以你自己提离职好一些
+
+答:大家认不认可我，喜不喜欢我。这些都不太重要，我来公司是来上班工作的。
+不是去公园里面相亲讨别人喜欢的。也不是网上交友搞角色扮演的。
+如果公司想开我就,直接你要工资补偿。
+
+2.你前两个季度的绩效。考核结果确实排在末尾。
+根据公司考核制度。排名末位属于不胜任工作。公司有权解除劳动合同。
+
+答:
+第一绩效考核制度生效。得经过民主程序和公示程序。我们的制度跟谁民主了，给谁公示了，有什么证据吗。
+第二排名末尾不能说明不能胜任工作。末位淘汰辞退员工本来就是不合法的。
+第三即使公司能够证明我不能胜任工作。也要先进行调岗或进行培训。
+    然后给我n+1的经济补偿金，才能解除劳动合同关系。
+
+3.我能理解你的心情。但我们公司今年确实遇见的困难。
+不止我们部门，其他部门也在裁员。
+公司也不容易，老板也不容易。
+我们都各退一步，老板肯定会记得你的好的。
+
+答:我当然理解公司也理解老板。但是我们家里也是上有老下有小。**
+```
+
+11. 女孩聊天相关
+
+鉴于很多程序员兄弟不会和女生聊天,下面讲讲怎么和女生聊天,聊天的逻辑是什么
+聊天到底聊什么？
