fix: 图片展示有问题修复

--- a/1-大模型应用基础/大模型的泛化能力.md
+++ b/1-大模型应用基础/大模型的泛化能力.md
@@ -120,7 +120,7 @@ RLHF 的基本思想是，代理系统与人类交互，并根据人类的反馈
 
      具体可参考：https://zhuanlan.zhihu.com/p/656244605
 
-![img.png](..%2Fusing_files%2Fimg%2Fllms%2Fimg.png)
+![img.png](../using_files/img/llms/img.png)
 
 ### Reference(参考文档)
 
