--- a/1-大模型应用基础/聚类.分类_算法.md
+++ b/1-大模型应用基础/聚类.分类_算法.md
@@ -41,7 +41,7 @@ K 值需要人为设定，不同 K 值得到的结果不一样；
 不适合太离散的分类、样本类别不平衡的分类、非凸形状的分类。
 ```
 
-![img.png](..%2Fusing_files%2Fimg%2FK-means%2Fimg.png)
+![img.png](../using_files/img/K-means/img.png)
 
 ```python
 # 实例 pip install scikit-learn
@@ -93,7 +93,7 @@ plt.figure(figsize=(10, 5))
 dendrogram(Z)
 plt.show()
 ```
-![img_1.png](..%2Fusing_files%2Fimg%2FK-means%2Fimg_1.png)
+![img_1.png](../using_files/img/K-means/img_1.png)
 
 ### 分类
 
@@ -107,9 +107,9 @@ plt.show()
 要搞清楚一件不确定的事，需要了解大量信息。
 熵(entropy)用于表示 随机变量不确定性的度量, 如果熵越大，表示不确定性越大。
 ```
-![img_2.png](..%2Fusing_files%2Fimg%2FK-means%2Fimg_2.png)
+![img_2.png](../using_files/img/K-means/img_2.png)
 
-![img_3.png](..%2Fusing_files%2Fimg%2FK-means%2Fimg_3.png)
+![img_3.png](../using_files/img/K-means/img_3.png)
 
 2. 支持向量机(Support Vector Machine，SVM)
 ```text
@@ -117,7 +117,7 @@ plt.show()
 它的基本思想是找到一个最优的超平面来对数据进行分类，使得两个不同类别的样本点距离超平面的间隔最大化。
 ```
 
-![img_4.png](..%2Fusing_files%2Fimg%2FK-means%2Fimg_4.png)
+![img_4.png](../using_files/img/K-means/img_4.png)
 
 3. 随机森林
 ```text
@@ -140,7 +140,7 @@ plt.show()
 对于回归问题，采用平均法，对每个样本的预测结果进行平均。
 ```
 
-![img_5.png](..%2Fusing_files%2Fimg%2FK-means%2Fimg_5.png)
+![img_5.png](../using_files/img/K-means/img_5.png)
 
 ### Reference
 
