--- a/面试必问问题.md
+++ b/面试必问问题.md
@@ -1,64 +1,89 @@
-1:你先自我介绍一下？
-时间控制在2-3分钟，重点强调与岗位的匹配程度，以及你的项目成果及个人能力
+## interview faq questions
 
+### 0:求职动机
+在 [xxx] 这段时间我收获了很多，特别是在大模型方向上通过项目实践和主动学习，提升了不少技术能力，也积累了一定的经验。
+但随着个人职业规划的逐步清晰，我希望能在更具挑战性和发展空间的平台上进一步成长，也希望在未来的工作中能够实现能力和价值更匹配的发展路径。
+因此，我在考虑一些新的机会。
+
+### 1:你先做一下我介绍
+
+```
+时间控制在1-2分钟，重点强调与岗位的匹配程度，以及你的项目成果及个人能力
 自己+公司+职位+过往项目+主要优势+谢谢
+```
 
-面试官您好，我叫mmm，目前就职于XX公司，担任资深 产品经理，有8年的产品开发与规划经验。 之前分别主导过XX项目，项目的主要背景是X,上市后取
-得了XX的成绩（数字化描述），我在其中的主要贡献包括 A、B、C,并拉动团队进行经验复盘，改善了XX业务的效 率。我本科/硕士毕业于XX学校（社招建议先讲上段工作，
-最后提一句学校就行)。我对XX行业岗位方向非常看好(简要谈一两句你对行业的看法)，贵公司的业务和岗位
-需求我也有做分析了解，和我的职业发展非常契合，我的 主要优势包括A、B、C(讲你的业务技能、行业资源、成
-功经验等)非常期待加入公司，为公司创造价值。感谢。
+```
+面试官您好，我是 [xxx]，毕业于 [xxx] 大学,先后在 [xxx] 担任岗位 目前任职于 [xxx]，担任大模型算法工程师。
 
-2:为什么考虑从上家离职？
+在过往的工作中，我主导并参与了多个AI与企业研发/生产/营销场景结合的项目。比如
+1. [xxx]
+2. [xxx]
+3. [xxx]
 
-(下面这些个有问题,需要真诚一点,面试官都是看的出来的)
+技术方面
+1. 了解主流大语言模型的原理与架构设计
+2. 熟悉高效微调框架，以及模型部署与推理加速工具
+3. 掌握机器学习，在图像分类、目标检测等 CV 任务与回归、分类、行为分析等任务中有大量建模经验
+4. 熟悉智能 Agent 设计与开发，能够构建高效的多任务协作系统
+感谢您的聆听，我期待有机会进一步交流。谢谢！
+```
 
-感谢前公司+工作总结+离职原因+你的愿景
+### 2:为什么考虑从上家离职？
 
-首先我非常感谢上家公司为我提供的发展机会。 在过去一段时间，我分别为公司创造了XX的业务价值和收
-入，我个人也通过主动学习，对XX业务所需技能的掌握更 加深入 但原公司内部的晋升较为有限，甚于我个人的职业规划，
-想要到XX类型的平台继续发展，所以在看新的机会。
+=求职动机
 
-3:你对我们公司了解多少？
+### 3:你对我们公司了解多少？
+
+(一般不问)
 
 业务+产品+行业+夸
-公司的主要业务是海外市场的XX产品及服务，产品的主要 特点是XX,目前在行业中处于头部地位，在XX平台的市场
+公司的主要业务是海外市场的XX产品及服务，产品的主要特点是XX,目前在行业中处于头部地位，在XX平台的市场
 表现很好，公司的营收也一直在上涨。
 
-4:你的职业规划是什么？
+### 4:你的职业规划是什么？
 
-我的短期职业规划，希望进入公司内，快速的熟悉公司业 务以及与团队磨合，尽快适应工作岗位，并为公司的XX业
-务创造价值。中长期的规划，我希望通过为公司不断创造 更大的价值，获得职位上的晋升，能够在业务中独当一面，
-带领团队为公司创造更大的价值，与公司共同成长。
+我的职业规划可以分为三个阶段：
 
-5:说说你的优缺点？
-☑参考回答：
-优点：可以从硬技能，如数据分析、市场分析、新媒体运 营、软件技能上进行举例描述，也可以从软技能，如抗压
-能力强、沟通协调能力强、适应学习能力强、组织领导能 力强等方面。 举一个简短的栗子
+**短期（1-2年内）：成为AI技术与业务深度融合的领军者**  
+我希望在接下来的一两年内，能够在当前的技术和业务基础上，进一步深化对AI大模型、智能Agent以及多模态系统的研究与应用。目标是成长为一名既能把握前沿技术方向，又能高效推动产品落地的复合型人才，比如担任AI产品总监或首席AI架构师。我希望能在一家具有技术深度和行业影响力的公司中，主导构建更多具备商业价值的AI解决方案。
+
+**中期（3-5年内）：引领团队打造行业标杆级AI产品**  
+在未来三到五年，我希望能够带领更大规模的跨职能团队，包括算法、工程、产品、运营等角色，打造具有行业影响力的人工智能平台或产品。同时，我也希望能在某个垂直领域（如智能制造、企业服务、内容生成）形成可复制的技术+业务模式，成为该领域的专家型领导者。
+
+**长期（5年以上）：推动AI技术创新与产业化落地**  
+更长远来看，我期望能够站在更高的战略层面，参与甚至主导AI技术的创新突破与规模化落地。无论是作为企业的CTO，还是创业公司的创始人，我都希望能够推动AI技术从实验室走向产业，真正解决现实世界的复杂问题，提升社会效率与人类体验。
+
+总的来说，我对未来的职业发展有着清晰的路径：**技术为基、业务为用、战略为势**。我希望不断拓展自己的边界，在AI这条路上走得更深、更远。谢谢！
+
+### 5:说说你的优缺点？
+参考回答：
+优点：可以从硬技能，如数据分析、市场分析、新媒体运营、软件技能上进行举例描述，也可以从软技能，如抗压能力强、沟通协调能力强、适应学习能力强、组织领导能力强等方面。 
+举一个简短的例子
 缺点：我认为我的一个缺点是有时候我过于追求完美主义
-我倾向于花费较多的时间来确保工作的质量达到我自己设 定的标准。为了改善这一点，我正在学习更好地管理时间，
-设定合理的目标和优先级。
+我倾向于花费较多的时间来确保工作的质量达到我自己设定的标准。为了改善这一点，我正在学习更好地管理时间，设定合理的目标和优先级。
 
-6:你最快多久可以到岗？
+### 6:你最快多久可以到岗？
 
-在职状态：我目前还在职，如果公司确定录用我的话，我 收到ofr后就会提出离职，并配合原公司做好工作交接，
+在职状态：我目前还在职，如果公司确定录用我的话，我收到ofr后就会提出离职，并配合原公司做好工作交接，
 预计在3周左右，我会加快办理离职手续，尽快到公司入职 报道。
-7:你还有其他offer吗？
-有offer:我目前手里刚收到XX个offer(一定不要说公 司名字)，目前还在综合考虑，我选择offr会更看重公司
+
+### 7:你还有其他offer吗？
+有offer:我目前手里刚收到XX个offer(一定不要说公司名字)，目前还在综合考虑，我选择offr会更看重公司
 发展前景、岗位成长机会、公司氛围等，目前贵司的这些 方面都和我的期望比较匹配，也和面试官沟通的非常愉快，
 如果公司确定给我offr的话，我会优先选择到贵司报到。
 
-7:你的期望薪资是多少？
+### 8:你的期望薪资是多少？
 
 先说明自己的全部薪资总包 再问清楚对方公司的薪资架构 最后提出一个具体的数字或涨幅
-☑参考回答：
+参考回答：
 薪资总包：我目前的总年薪是X万元，月薪15K,16薪， 还包括XX的年终奖、股票，以及通话、食堂等福利补贴， 五险一金是按照全额一档缴纳
 提问HR:想先了解下贵司的薪资架构组成、年终奖股票的 规侧、公司五险一金的缴纳情况
 提出涨幅：我有XX的项目经验，取得了XX成果，我个人也 擅长XX领域/技能，综合考虑，希望的薪资涨幅是30%或
 50W年薪总包
 
-8:你还有什么想问我的吗？
+### 9:你还有什么想问我的吗？
 
+```
 1:您对XX行业的看法是什么呢，公司应对如何更好的加 强在行业的竞争力？
 2:公司/部门下一阶段的主要任务是哪些呢？
 3:公司的晋升机制是怎么样呢？
@@ -66,11 +91,12 @@
 5：这个岗位在工作过程中会遇到哪些困难和挑战？
 (建议问，看看你能不能接受)
 6：您觉得我这次面试有什么可改善的地方吗？
-(一定要问，给自己上大分！)
 7:部门人员架构，组内的具体分工是怎样？
-(一定要问，说不清楚的，千万别去入职！)】
+```
 
-9. 谈薪相关
+---
+
+### 1. 谈薪相关
 ```text
 报价公式:
 准确数字+缓解气氛+综合考虑
@@ -85,7 +111,7 @@
 我就一定会立刻接这个offer，老师，您能看看能再帮我申请一下吗？
 ```
 
-10. 防辞退相关
+### 2. 防辞退相关
 ```text
 1.大家对你的工作能力和表现,都不太认可,
 你来了也快有一年了。可能还是不太适合。如果你一个小姑娘被开除了的话，以后可能也不太好找工作。
@@ -111,8 +137,3 @@
 
 答:我当然理解公司也理解老板。但是我们家里也是上有老下有小。**
 ```
-
-11. 女孩聊天相关
-
-鉴于很多程序员兄弟不会和女生聊天,下面讲讲怎么和女生聊天,聊天的逻辑是什么
-聊天到底聊什么？
