feat: 增加面试经历

--- a/3-面试问题记录/2025_interview_log/美团.md
+++ b/3-面试问题记录/2025_interview_log/美团.md
@@ -1,2 +1,32 @@
 20250523面试记录
 
+一个挺好的女领导面试的,但是看的出来非常忙.
+
+面试了1个多小时,我笔记本没电了还给我打电话过来,很少见
+
+而且给了一个算法题目,反正当时一下我是没做出来,也没说什么
+
+```
+一个数组有m个数据，有正数和负数，求连续的子集的最大和，和这个子集(备注:m很大)
+```
+
+
+1. 你现在是出来找工作原因是什么?
+2. 你挑一个做的最好的一个项目讲一下
+3. 知识库是存储在哪个向量知识库?
+4. 对比一下lancedb,milvus,faiss,chromdb之类的
+5. 向量模型,rerank模型用过哪些?怎么选的?最后用的哪个效果好?
+6. 你怎么判断就是你微调是有效果?
+7. 风控的一些可疑非法交易这一块你能大概讲一下.
+8. 你如何去判断它的一个效果?如果某一条数据不在真实数据里面怎么办?降低召回怎么解决?
+9. 梯度提升和随机森林,SVM,PCA,K-means怎么看他们哪个指标得分?
+10. 你根据这个得分怎么去后续的进行一些迭代?
+11. 你怎么让业务就是相信你给的数据可能是有效的?或者是说你能不能举个例子 有业务反馈这个东西需要迭代?然后你再怎么迭代的?
+12. deepspeed的这种加速多卡的一个训练的能给我大概讲一下吗是怎么做的?
+13. 多卡GPU机器之间是怎么进行通信的
+14. flash-attention讲解一下
+15. 你系统的学过那个机器学习的一些东西吗?无监督学习里面有哪些算法?
+16. 解释一下上面提到的算法,随便挑一个你知道的
+17. transformer结构解释一下
+18. 你在这个里面的话就是有什么优化?你有什么思路?
+19. kv-cache解释一下
