--- a/3-面试问题记录/2025_interview_log/赛力斯.md
+++ b/3-面试问题记录/2025_interview_log/赛力斯.md
@@ -14,4 +14,4 @@
 12. kv-cache原理讲一下
 13. 多卡并行里面 accelerate讲一下注意的点 deepspeed说一下它的zero1,zero2的区别
 
-挺重视人的,来面试的人挺多的,而且没有算法题,我觉得除了工作垃圾一点之外,其他还好
+挺重视人的,来面试的人挺多的,而且没有算法题,我觉得应该能过
